--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.20.0",
     "bcrypt": "^5.0.0",
     "cors": "^2.8.5",
+    "cryptr": "^6.0.2",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.26",
-    "nodemon": "^2.0.4"
+    "node-jsencrypt": "^1.0.0",
+    "nodemon": "^2.0.4",
+    "request": "^2.88.2"
   }
 }
