--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.26",
     "node-jsencrypt": "^1.0.0",
+    "nodemailer": "^6.4.14",
     "nodemon": "^2.0.4",
     "request": "^2.88.2"
   }
