--- a/package.json
+++ b/package.json
@@ -12,11 +12,16 @@
   "dependencies": {
     "axios": "^0.20.0",
     "bcrypt": "^5.0.0",
+    "cloudinary": "^1.23.0",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "cryptr": "^6.0.2",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.26",
+    "multer": "^1.4.2",
+    "multer-gridfs-storage": "^4.2.0",
     "node-jsencrypt": "^1.0.0",
     "nodemailer": "^6.4.14",
     "nodemon": "^2.0.4",
