--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cryptr": "^6.0.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "fs-extra": "^9.0.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.26",
     "multer": "^1.4.2",
