--- a/.env
+++ b/.env
@@ -1,10 +1,9 @@
 TOKEN_KEY = RIDKO133$
-EMAIL_USER = gtfintech@gmail.com
-EMAIL_PASS = rncvncbwdrixbscw
+EMAIL_USER = virtuousproutsacademy@gmail.com
+EMAIL_PASS = tzvgylinsanmshqk
 CLOUD_NAME = dcx4utzdx
 API_KEY = 226791946435464
 API_SECRET = yzsp3pOrvIEzFAhfMfWEIWXQmmA
 DATABASE_KEY = mongodb+srv://Ridwan:Ridko5267$@analytics-app.zsjxk.mongodb.net/<dbname>?retryWrites=true&w=majority
-
 
 CLOUDINARY_URL=cloudinary://226791946435464:yzsp3pOrvIEzFAhfMfWEIWXQmmA@dcx4utzdx
