added an endpoint for mailing Newcore Technologies

--- a/.env
+++ b/.env
@@ -1,6 +1,8 @@
 TOKEN_KEY = RIDKO133$
 EMAIL_USER = virtuousproutsacademy@gmail.com
 EMAIL_PASS = tzvgylinsanmshqk
+NEWCORE_EMAIL = newcoretechnologies@gmail.com
+NEWCORE_EMAIL_PASS = mesinwwirfgqlfxi
 CLOUD_NAME = dcx4utzdx
 API_KEY = 226791946435464
 API_SECRET = yzsp3pOrvIEzFAhfMfWEIWXQmmA
