--- a/vercel.json
+++ b/vercel.json
@@ -8,8 +8,9 @@
     ],
     "routes": [
       {
-        "src": "/(.*)",
+        "src": "/src/(.*)",
         "dest": "src/index.js"
       }
-    ]
+    ],
+    "rewrites": [{ "source": "/src/(.*)", "destination": "/src" }]
   }
