--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "engines": {
+    "node": "v14.21.1",
+    "npm": "6.14.17"
+  },
   "scripts": {
     "start": "nodemon src/index.js"
   },
